# precise_docking_ws

./: README.md  frames_2024-09-11_19.56.26.gv  frames_2024-09-12_15.11.40.gv  frames_2024-12-29_00.22.24.gv  maps.pgm  maps.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh  spawn_shell.bash
install/active_localization/lib/active_localization/: active_localization_node  active_node  frontier_detection  frontier_detection_robot  local_map_lidar_node  local_map_node  local_map_robot  local_map_robot_1  localization  path_to_goal
install/active_localization/share/active_localization/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arcuo_marker_detection/lib/arcuo_marker_detection/: aruco_marker_detection  aruco_marker_detection_node  aruco_marker_detection_robot  transform
install/arcuo_marker_detection/share/arcuo_marker_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/autonomous_exploration/share/autonomous_exploration/: package.dsv  package.sh  package.xml
install/docking_bringup/share/docking_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/docking_bringup/share/docking_bringup/cmake/: docking_bringupConfig-version.cmake  docking_bringupConfig.cmake
install/docking_bringup/share/docking_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/docking_bringup/share/docking_bringup/launch/: docking.launch.py
install/frontend/lib/frontend/: cpp_executable  hypotheses_map.py  hypotheses_test_map.py  icp_node  laser_scan.py  localize_robot.py  localize_with_arcuo.py  main.py  map_create.py  noisy_odom.py  odom_to_map.py  plot_odom.py  pose_graph.py  pose_graph_odom.py  pose_graph_odom_landmark.py  pose_graph_optimization.py  scan_to_point.py  two_landmark.py
install/frontend/share/frontend/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/frontend/share/frontend/cmake/: frontendConfig-version.cmake  frontendConfig.cmake
install/frontend/share/frontend/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/libpointmatcher_ros/share/libpointmatcher_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/localization_amcl/lib/localization_amcl/: cpp_executable  localization.py  py_node.py
install/localization_amcl/share/localization_amcl/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/localization_amcl/share/localization_amcl/cmake/: localization_amclConfig-version.cmake  (+1 more)
install/localization_node/lib/localization_node/: active_docking
install/localization_node/share/localization_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav2_amcl/lib/nav2_amcl/: amcl
install/nav2_amcl/share/nav2_amcl/: local_setup.sh  package.dsv  package.sh
install/norlab_icp_mapper/share/norlab_icp_mapper/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/norlab_icp_mapper_ros/share/norlab_icp_mapper_ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/reach_the_goal/lib/reach_the_goal/: reach_the_goal_node
install/reach_the_goal/share/reach_the_goal/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/teleop_cpp_ros2/lib/teleop_cpp_ros2/: teleop
install/teleop_cpp_ros2/share/teleop_cpp_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/template_ros2/share/template_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ultralytics_ros/lib/ultralytics_ros/: tracker_node.py
install/ultralytics_ros/share/ultralytics_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
log/: latest_build  latest_list
maps/: football_3_players.pgm  football_3_players.yaml  football_6_players.pgm  football_6_players.yaml  real_world1.pgm  real_world1.yaml  real_world2.pgm  real_world2.yaml  realworld_simulation.pgm  realworld_simulation.yaml
src/active_localization/: package.xml  setup.cfg  setup.py
src/active_localization/active_localization/: frontier_detection.py  frontier_detection_robot.py  local_map.py  local_map_lidar.py  local_map_robot_1.py  next_best_view.py  path_to_goal.py  utility_function.py
src/arcuo_marker_detection/: package.xml  setup.cfg  setup.py
src/arcuo_marker_detection/arcuo_marker_detection/: arcuo_detection.py  arcuo_detection_robot.py  tranform_map.py
src/docking_bringup/: CMakeLists.txt  package.xml
src/docking_bringup/launch/: docking.launch.py
src/frontend/: CMakeLists.txt  package.xml
src/frontend/include/frontend/: cpp_header.hpp  icp_mapping.h
src/frontend/scripts/: hypotheses_map.py  hypotheses_test_map.py  icp.py  localize_robot.py  localize_with_arcuo.py  main.py  map_create.py  measurement_model.py  noisy_odom.py  occumpancy_map.py  odom_to_map.py  plot_odom.py  pose_graph.py  pose_graph_odom_landmark.py  pose_graph_optimization.py  py_node.py  scan_to_point.py  single_hyp_localize.py  two_landmark.py
src/frontend/src/: cpp_node.cpp  icp_node.cpp
src/localization_amcl/: CMakeLists.txt
src/localization_amcl/include/localization_amcl/: cpp_header.hpp
src/localization_amcl/localization_amcl/pf_localisation/: pf_base.py  sensor_model.py
src/localization_amcl/src/: cpp_node.cpp
src/localization_node/: CMakeLists.txt
src/localization_node/include/localization_node/: active_amcl.hpp
src/localization_node/src/: active_amcl.cpp  main.cpp
src/reach_the_goal/: package.xml  setup.cfg  setup.py
src/template_ros2/: setup.cfg  setup.py
(+132 files in other folders)
